# ocr_module

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  設計.md
.github/workflows/: release.yml
adapters/infra/azure/: __init__.py  azure_client.py  ocr_repository.py
adapters/infra/fpdf2/: fpdf2_generate_pdf_repository.py
adapters/infra/openai/: openai_translate_section_repository.py
adapters/infra/pylatex/: __init__.py  pylatex_pdf_generate_repository.py
adapters/infra/pymupdf/: __init__.py  pymupdf_generate_pdf_repository.py  pymupdf_image_extractor.py  pymupdf_image_processor_repository.py
adapters/routers/: test.py
config/: config.py
domain/entities/: models.py
domain/repositories/: __init__.py  i_generate_pdf_repository.py  i_image_extractor_repository.py  i_image_processor_repository.py  i_ocr_repository.py  i_translate_section_repository.py
ocr_module/: __init__.py
ocr_module/adapters/: __init__.py
ocr_module/adapters/routers/: formula_id_test.py  test.py
ocr_module/config/: config.py  logging.toml
ocr_module/domain/entities/: __init__.py  page_models.py  section_models.py  usage_model.py
ocr_module/domain/repositories/: __init__.py  i_generate_pdf_repository.py  i_ocr_repository.py  (+2 more)
ocr_module/framework/: resolver.py
ocr_module/usecase/: __init__.py  change_formula_id.py  generate_translated_pdf.py  get_section.py  get_translated_page.py  ocr_pdf.py  translate_pdf.py  translate_section.py  translate_section_formula_id.py
ocr_module/utils/: logger.py
usecase/: __init__.py  ocr_pdf.py  translate_pdf.py
(+19 files in other folders)
