[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocr_module"
version = "0.1.24"
description = "OCRと翻訳機能を提供するPythonモジュール"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "azure-ai-documentintelligence",
    "openai",
    "pylatex",
    "pypdf2",
    "pydantic-settings",
]

[project.urls]
Repository = "https://github.com/ridgebull/ocr_module"
